--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://mobilecasinoplay88.github.io/Discover-Your-Perfect-Pocket-Casino-A-Comprehensive-Guide-to-Top-Tier-Mobile-Gaming/">https://mobilecasinoplay88.github.io/Discover-Your-Perfect-Pocket-Casino-A-Comprehensive-Guide-to-Top-Tier-Mobile-Gaming/</a><br>
+                <a target="_bLank" href="https://mobilecasinoplay88.s3.us-east-005.backblazeb2.com/Discover+Your+Perfect+Pocket+Casino:+A+Comprehensive+Guide+to+Top-Tier+Mobile+Gaming/index.html">https://mobilecasinoplay88.s3.us-east-005.backblazeb2.com/Discover+Your+Perfect+Pocket+Casino:+A+Comprehensive+Guide+to+Top-Tier+Mobile+Gaming/index.html</a><br>
+                <a target="_bLank" href="https://discover-your-perfect-p-git-ae1bc1-mobilecasinoplay88s-projects.vercel.app/">https://discover-your-perfect-p-git-ae1bc1-mobilecasinoplay88s-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://jovial-marzipan-389dee.netlify.app/">https://jovial-marzipan-389dee.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
